counterclockwise and clockwise control interface

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
 SET(SRC main.cpp Cube.cpp Matrix4.cpp)
-ADD_EXECUTABLE(gljoy ${SRC})
-TARGET_LINK_LIBRARIES(gljoy GL glut GLU)
+ADD_EXECUTABLE(RubikCube ${SRC})
+TARGET_LINK_LIBRARIES(RubikCube GL glut GLU)
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
