animation trigger control

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,17 @@
 SET(SRC main.cpp Cube.cpp Matrix4.cpp)
+IF(APPLE)
+    FIND_PACKAGE(OpenGL REQUIRED)
+    INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
+    FIND_PACKAGE(GLUT REQUIRED)
+    INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIR})
+    message(status "apple")
+ENDIF(APPLE)
 ADD_EXECUTABLE(RubikCube ${SRC})
-TARGET_LINK_LIBRARIES(RubikCube GL glut GLU)
+IF(APPLE)
+    TARGET_LINK_LIBRARIES(RubikCube ${GLUT_LIBRARY} ${OPENGL_LIBRARY})
+    message(status "apple")
+ELSEIF(UNIX)
+    TARGET_LINK_LIBRARIES(RubikCube GL glut GLU)
+    message(status "linux")
+ENDIF()
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
